--- a/configs/hierarchical-vision-project/nabirds-linear-probing/fuzzy-fig-1e-6-no-reg.yaml
+++ b/configs/hierarchical-vision-project/nabirds-linear-probing/fuzzy-fig-1e-6-no-reg.yaml
@@ -5,7 +5,7 @@ DATA:
 MODEL:
   TYPE: swinv2
   NAME: swinv2_base_window12
-  DROP_PATH_RATE: 0.2
+  DROP_PATH_RATE: 0.0
   SWINV2:
     EMBED_DIM: 128
     DEPTHS: [ 2, 2, 18, 2 ]
@@ -16,12 +16,12 @@ TRAIN:
 
   EPOCHS: 50
   WARMUP_EPOCHS: 2
-  WEIGHT_DECAY: 0.1
+  WEIGHT_DECAY: 0.0
 
-  WARMUP_LR: 1e-7
-  BASE_LR: 1e-4
-  MIN_LR: 1e-4
+  WARMUP_LR: 1e-9
+  BASE_LR: 1e-6
+  MIN_LR: 1e-6
 
 EXPERIMENT:
-  NAME: fuzzy-fig-1e-4
-  WANDB_ID: 1dg0gvix
+  NAME: fuzzy-fig-1e-6-no-reg
+  WANDB_ID: 1zg01e6nr
