--- a/configs/hierarchical-vision-project/nabirds-linear-probing/fuzzy-fig-1e-6.yaml
+++ b/configs/hierarchical-vision-project/nabirds-linear-probing/fuzzy-fig-1e-6.yaml
@@ -18,10 +18,10 @@ TRAIN:
   WARMUP_EPOCHS: 2
   WEIGHT_DECAY: 0.1
 
-  WARMUP_LR: 1e-7
-  BASE_LR: 1e-4
-  MIN_LR: 1e-4
+  WARMUP_LR: 1e-9
+  BASE_LR: 1e-6
+  MIN_LR: 1e-6
 
 EXPERIMENT:
-  NAME: fuzzy-fig-1e-4
-  WANDB_ID: 1dg0gvix
+  NAME: fuzzy-fig-1e-6
+  WANDB_ID: 1zg16vwe
